# LiteRTP

./: .gitignore  CMakeLists.txt  LiteRTPConfig.h.in  README.md  arm-rpi.cmake  build.sh  build_rpi.sh
src/: CMakeLists.txt  liteRTP.cpp  liteRTP.h  main.cpp
